--- a/CarRentalExamen.Blazor/Pages/CustomerCarDetails.razor
+++ b/CarRentalExamen.Blazor/Pages/CustomerCarDetails.razor
@@ -1,5 +1,5 @@
 @page "/cars/{id:int}"
-@attribute [Authorize]
+@attribute [AllowAnonymous]
 @inject ApiClient Api
 @inject NavigationManager Navigation
 
