--- a/CarRentalExamen.Blazor/Pages/CustomerHome.razor
+++ b/CarRentalExamen.Blazor/Pages/CustomerHome.razor
@@ -1,5 +1,5 @@
 @page "/customer"
-@attribute [Authorize(Roles = "Customer")]
+@attribute [AllowAnonymous]
 @inject NavigationManager Navigation
 @inject ApiClient Api
 
